{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 38,
  "lineage": "da0a07da-c392-fe27-1bd5-3c13b1352f7f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JavaApp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:703155827095:instance/i-0c9e81d2ba638225c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9e81d2ba638225c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Oje",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0033b01970f36358e",
            "private_dns": "ip-10-0-1-13.ec2.internal",
            "private_ip": "10.0.1.13",
            "public_dns": "ec2-107-23-65-30.compute-1.amazonaws.com",
            "public_ip": "107.23.65.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09437ad0913ed9440",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cf4f9b1d01b85eb",
            "tags": {
              "Name": " Node1"
            },
            "tags_all": {
              "Name": " Node1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07823321cf70435bb"
            ]
          },
          "dependencies": [
            "aws_security_group.javaapp-sg",
            "aws_subnet.javaapp-public-subnet",
            "aws_vpc.javaapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:703155827095:instance/i-00a6df6578f3bf9e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a6df6578f3bf9e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Oje",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0673892534861190e",
            "private_dns": "ip-10-0-1-15.ec2.internal",
            "private_ip": "10.0.1.15",
            "public_dns": "ec2-44-204-117-11.compute-1.amazonaws.com",
            "public_ip": "44.204.117.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0566aa505862ef3d3",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cf4f9b1d01b85eb",
            "tags": {
              "Name": " Jenkins"
            },
            "tags_all": {
              "Name": " Jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07823321cf70435bb"
            ]
          },
          "dependencies": [
            "aws_security_group.javaapp-sg",
            "aws_subnet.javaapp-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:703155827095:instance/i-050f8b14f0422494a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050f8b14f0422494a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Oje",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e0c9bdfae779bc09",
            "private_dns": "ip-10-0-1-16.ec2.internal",
            "private_ip": "10.0.1.16",
            "public_dns": "ec2-44-192-109-98.compute-1.amazonaws.com",
            "public_ip": "44.192.109.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be466531dd6b005f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cf4f9b1d01b85eb",
            "tags": {
              "Name": " Jenkins1"
            },
            "tags_all": {
              "Name": " Jenkins1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07823321cf70435bb"
            ]
          },
          "dependencies": [
            "aws_security_group.javaapp-sg",
            "aws_subnet.javaapp-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002070d43b0a4f171",
            "arn": "arn:aws:ec2:us-east-1:703155827095:instance/i-030fe9c5d58be0e40",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030fe9c5d58be0e40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Oje",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba95c441f6dad060",
            "private_dns": "ip-10-0-1-14.ec2.internal",
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-44-193-207-154.compute-1.amazonaws.com",
            "public_ip": "44.193.207.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0642729e5b1e19797",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cf4f9b1d01b85eb",
            "tags": {
              "Name": " Node2"
            },
            "tags_all": {
              "Name": " Node2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07823321cf70435bb"
            ]
          },
          "dependencies": [
            "aws_security_group.javaapp-sg",
            "aws_subnet.javaapp-public-subnet",
            "aws_vpc.javaapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "javaapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703155827095:internet-gateway/igw-0f1e7765f325c0887",
            "id": "igw-0f1e7765f325c0887",
            "owner_id": "703155827095",
            "tags": {
              "Name": "JavaApp igw"
            },
            "tags_all": {
              "Name": "JavaApp igw"
            },
            "vpc_id": "vpc-02355fd343011d414"
          },
          "dependencies": [
            "aws_vpc.javaapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "javaapp-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f1e7765f325c0887",
            "id": "r-rtb-08f44ab5f6c71f8461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f44ab5f6c71f846",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.javaapp-igw",
            "aws_route_table.javaapp-public-route-table",
            "aws_vpc.javaapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "javaapp-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703155827095:route-table/rtb-0d29c2962288e1b52",
            "id": "rtb-0d29c2962288e1b52",
            "owner_id": "703155827095",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "JavaApp private route table"
            },
            "tags_all": {
              "Name": "JavaApp private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02355fd343011d414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.javaapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "javaapp-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703155827095:route-table/rtb-08f44ab5f6c71f846",
            "id": "rtb-08f44ab5f6c71f846",
            "owner_id": "703155827095",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "JavaApp public route table"
            },
            "tags_all": {
              "Name": "JavaApp public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02355fd343011d414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.javaapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "javaapp-private-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf5a7527457b71ba",
            "route_table_id": "rtb-0d29c2962288e1b52",
            "subnet_id": "subnet-04a3f37857c471954"
          },
          "dependencies": [
            "aws_route_table.javaapp-private-route-table",
            "aws_subnet.javaapp-private-subnet",
            "aws_vpc.javaapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "javaapp-public-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d7540068899da4a",
            "route_table_id": "rtb-08f44ab5f6c71f846",
            "subnet_id": "subnet-08cf4f9b1d01b85eb"
          },
          "dependencies": [
            "aws_route_table.javaapp-public-route-table",
            "aws_subnet.javaapp-public-subnet",
            "aws_vpc.javaapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "javaapp-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703155827095:security-group/sg-07823321cf70435bb",
            "description": "Allow SSH \u0026 HTTPD inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07823321cf70435bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Server from port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPD Server from tomcat(8080)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "JavaApp SSH \u0026 HTTPD",
            "name_prefix": "",
            "owner_id": "703155827095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JavaApp-SG"
            },
            "tags_all": {
              "Name": "JavaApp-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02355fd343011d414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.javaapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "javaapp-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703155827095:subnet/subnet-04a3f37857c471954",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a3f37857c471954",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703155827095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JavaApp private subnet1"
            },
            "tags_all": {
              "Name": "JavaApp private subnet1"
            },
            "vpc_id": "vpc-02355fd343011d414"
          },
          "dependencies": [
            "aws_vpc.javaapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "javaapp-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703155827095:subnet/subnet-08cf4f9b1d01b85eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cf4f9b1d01b85eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703155827095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JavaApp public subnet1"
            },
            "tags_all": {
              "Name": "JavaApp public subnet1"
            },
            "vpc_id": "vpc-02355fd343011d414"
          },
          "dependencies": [
            "aws_vpc.javaapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "javaapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:703155827095:vpc/vpc-02355fd343011d414",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bec33266c41d4bc3",
            "default_route_table_id": "rtb-08c94008c82c7d265",
            "default_security_group_id": "sg-0af111062ceefb4f0",
            "dhcp_options_id": "dopt-04156e49744066ca2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02355fd343011d414",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c94008c82c7d265",
            "owner_id": "703155827095",
            "tags": {
              "Name": "JavaApp vpc"
            },
            "tags_all": {
              "Name": "JavaApp vpc"
            }
          }
        }
      ]
    }
  ]
}